# agentscope-webui

./: .env.example  .gitignore  AGENT.md  CLAUDE.md  README.md  logs.sh  setup.sh  start.sh  stop.sh
backend/: agent_config_router.py  auth_router.py  knowledge_base_router.py  main.py  mcp_router.py  model_router.py  permission_guard.py  pyproject.toml  redis_browser_router.py  schedule_router.py  session_router.py  skill_router.py  tenant_router.py  users_router.py  webui_helpers.py  webui_router.py
docs/architecture/: multi-tenant-permission.md
frontend/: index.html  package-lock.json  package.json  tsconfig.json  tsconfig.node.json  vite.config.ts
frontend/src/: index.css  main.tsx
frontend/src/api/: agents.ts  auth.ts  client.ts  credentials.ts  schedules.ts  sessions.ts  tenants.ts  users.ts  webui.ts
frontend/src/components/: ErrorBoundary.tsx  LangSwitcher.tsx
frontend/src/features/agents/: AgentsPage.tsx
frontend/src/features/auth/: LoginPage.tsx
frontend/src/features/chat/: AgentPicker.tsx  AgentPickerModal.tsx  ChatPage.tsx  SkillPickerModal.tsx  useSSEStream.ts
frontend/src/features/credentials/: CredentialsPage.tsx
frontend/src/features/knowledge/: KnowledgeDetailPage.tsx  KnowledgePage.tsx
frontend/src/features/logs/: LogsPage.tsx
frontend/src/hooks/: useScopedResources.ts
frontend/src/i18n/: config.ts  supported.ts  types.d.ts
frontend/src/layouts/: AppLayout.tsx
frontend/src/router/: PrivateRoute.tsx  routes.tsx
frontend/src/store/: auth.ts
nginx/: agent.conf.example
scripts/: common.sh
(+20 files in other folders)
